<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".AdminRegisterUI"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvAdminRegistration"
            android:layout_width="wrap_content"
            android:layout_height="83dp"
            android:text="@string/register_adminprofile"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:fontFamily="@font/julius_sans_one"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="149dp" />

        <TextView
            android:id="@+id/tvAdminID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff_ID"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etAdminID"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAdminName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="295dp" />

        <EditText
            android:id="@+id/etAdminName"
            android:layout_width="351dp"
            android:layout_height="27dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="391dp" />


        <TextView
            android:id="@+id/tvAdminUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etAdminUserName"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAdminPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/etAdminPassword"
            android:layout_width="200dp"
            android:layout_height="27dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_round"
            android:drawableTint="@color/gradStart"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnRegisterAdmin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_round"
            android:backgroundTint="#DA3F70"
            android:drawableTint="@color/white"
            android:paddingLeft="100sp"
            android:paddingRight="100sp"
            android:text="@string/admin_register"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>