<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".LaptopProfileUI"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvLaptopRegistration"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:text="@string/laptop_profile"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:fontFamily="@font/julius_sans_one"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="149dp" />

            <TextView
                android:id="@+id/tvLaptopID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laptop_id"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etLaptopID"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_round"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvlaptopModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lap_Model_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="295dp" />

            <EditText
                android:id="@+id/etLaptopModel"
                android:layout_width="351dp"
                android:layout_height="27dp"
                android:background="@drawable/edit_round"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="391dp" />


            <TextView
                android:id="@+id/tvLaptopAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/laptop_amount"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etLaptopAmount"
                android:layout_width="200dp"
                android:layout_height="27dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_round"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="5dp"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvlaptopPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/etLaptopPassword"
                android:layout_width="200dp"
                android:layout_height="27dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_round"
                android:drawableTint="@color/gradStart"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnUpdateLaptop"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_round"
                android:backgroundTint="#18648D"
                android:drawableTint="@color/white"
                android:paddingLeft="100sp"
                android:paddingRight="100sp"
                android:text="@string/update_details"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnDeleteLaptop"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="56dp"
                android:layout_marginRight="56dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button_round"
                android:backgroundTint="#CA1C1C"
                android:drawableTint="@color/white"
                android:paddingLeft="100sp"
                android:paddingRight="100sp"
                android:text="@string/delete_record"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>