<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".AdminMainUI">

    <TextView
        android:id="@+id/tvAdminWelcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/welcome_admin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:fontFamily="@font/julius_sans_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAdminUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:fontFamily="@font/julius_sans_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdminWelcomeUser" />

    <Button
        android:id="@+id/btnAdminProfile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/button_round"
        android:backgroundTint="#D63939"
        android:drawableLeft="@drawable/profile"
        android:drawableTint="@color/white"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/view_admin_profile"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdminUsername" />

    <Button
        android:id="@+id/btnAdminViewLaptops"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/button_round"
        android:backgroundTint="#18648D"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/view_laptops"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdminProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>

